# neuron-style-transfer

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml
.github/: dependabot.yml  settings.yml
.github/workflows/: ci.yml  claude.yaml
configs/: config.yaml
configs/backbone/: resnet50.yaml  vgg16.yaml  vgg19.yaml
configs/data/: pair1.yaml  pair2.yaml  pair3.yaml
configs/runtime/: default.yaml
configs/transfer/: default.yaml
docs/: architecture.md  references.bib  report.tex
src/style_transfer/: __init__.py  cli.py  config_schema.py  device.py  losses.py  models.py  run.py  transfer.py  transforms.py
tests/: conftest.py  test_api_stability.py  test_cli.py  test_config_schema.py  test_device.py  test_losses.py  test_models.py  test_properties.py  test_run.py  test_transfer.py  test_transforms.py
tests/tools/: test_check_banners.py  test_check_device.py  test_check_imports.py  test_flagged_mutants.py
tools/pre_commit/: check_device.py  check_imports.py
tools/test_utils/: flagged_mutants.py
