[project]
name = "neuron-style-transfer"
version = "0.1.0"
description = "Neural style transfer by image optimization, comparing VGG16, VGG19 and ResNet50 backbones."
authors = [{ name = "Nikita S.", email = "nikswirlo@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch (>=2.2,<3.0)",
    "torchvision (>=0.17,<1.0)",
    "pillow (>=10.0)",
    "numpy (>=1.26)",
    "matplotlib (>=3.8)",
    "pyyaml (>=6.0)",
]

[project.scripts]
style-transfer = "style_transfer.cli:main"

[project.optional-dependencies]
dev = ["pytest (>=8.0)", "pytest-cov (>=5.0)", "ruff (>=0.6)"]

[tool.poetry]
packages = [{ include = "style_transfer", from = "src" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
