[project]
name = "neuron-style-transfer"
version = "0.1.0"
description = "Neural style transfer by image optimization, comparing VGG16, VGG19 and ResNet50 backbones."
authors = [{ name = "Nikita S.", email = "nikswirlo@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2,<3.0",
    "torchvision>=0.17,<1.0",
    "pillow>=10.0",
    "numpy>=1.26,<2.3",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "hydra-core>=1.3.3,<2.0.0",
]

[project.scripts]
style-transfer = "style_transfer.run:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "mutmut>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "pre-commit>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Let the standalone tool scripts (not a package) be imported by their tests.
pythonpath = ["tools/pre_commit", "tools/test_utils"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
# `I` (isort) is intentionally off: it sorts imports alphabetically by its own
# sectioning, which fights the by-length four-block import scheme (code-style §6).
select = ["E", "F", "UP", "B", "SIM", "C4", "PT"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tools"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Third-party libraries without (complete) type stubs.
[[tool.mypy.overrides]]
module = ["torchvision.*", "PIL.*"]
ignore_missing_imports = true

[tool.mutmut]
source_paths = ["src/style_transfer/"]
do_not_mutate = ["*/models.py"]

[tool.coverage.run]
branch = true
source = ["style_transfer", "tools"]

[tool.coverage.report]
show_missing = true
# Don't count lines that can't meaningfully be exercised by the test suite.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/style_transfer"]
